TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "129583190964016" [label="Start"];
  "129583190964016" -> "129583190961184";
  "129583190961184" [label="Code"];
  "129583190961184" -> "129583190961328";
  "129583190961328" [label="Function"];
  "129583190961328" -> "129583190959792";
  "129583190961328" -> "129583190959552";
  "129583190961328" -> "129583190950192";
  "129583190959792" [label="main IDENTIFIER"];
  "129583190959552" [label="Parameters"];
  "129583190950192" [label="Code"];
  "129583190950192" -> "129583190955136";
  "129583190950192" -> "129583190783936";
  "129583190950192" -> "129583191019424";
  "129583190950192" -> "129583191020000";
  "129583190950192" -> "129583191020288";
  "129583190955136" [label="Declaration"];
  "129583190955136" -> "129583190955808";
  "129583190955136" -> "129583190777552";
  "129583190955808" [label="x IDENTIFIER"];
  "129583190777552" [label="1 INT"];
  "129583190783936" [label="Code"];
  "129583190783936" -> "129583191016640";
  "129583190783936" -> "129583191017552";
  "129583190783936" -> "129583191018032";
  "129583190783936" -> "129583191019040";
  "129583191016640" [label="Declaration"];
  "129583191016640" -> "129583191016544";
  "129583191016640" -> "129583191016400";
  "129583191016544" [label="x IDENTIFIER"];
  "129583191016400" [label="3 INT"];
  "129583191017552" [label="Declaration"];
  "129583191017552" -> "129583191017792";
  "129583191017552" -> "129583191017936";
  "129583191017792" [label="y IDENTIFIER"];
  "129583191017936" [label="2 INT"];
  "129583191018032" [label="Declaration"];
  "129583191018032" -> "129583191018224";
  "129583191018032" -> "129583191018368";
  "129583191018224" [label="z IDENTIFIER"];
  "129583191018368" [label="Expr"];
  "129583191018368" -> "129583191018560";
  "129583191018368" -> "129583191018848";
  "129583191018368" -> "129583191018992";
  "129583191018560" [label="Dereference"];
  "129583191018560" -> "129583191018752";
  "129583191018752" [label="y IDENTIFIER"];
  "129583191018848" [label="+ T__41"];
  "129583191018992" [label="Dereference"];
  "129583191018992" -> "129583191019184";
  "129583191019184" [label="x IDENTIFIER"];
  "129583191019040" [label="Comment"];
  "129583191019040" -> "129583191019376";
  "129583191019376" [label=" local z should be 5 COMMENT"];
  "129583191019424" [label="Declaration"];
  "129583191019424" -> "129583191019616";
  "129583191019424" -> "129583191019760";
  "129583191019616" [label="z IDENTIFIER"];
  "129583191019760" [label="Dereference"];
  "129583191019760" -> "129583191019952";
  "129583191019952" [label="x IDENTIFIER"];
  "129583191020000" [label="Comment"];
  "129583191020000" -> "129583191020192";
  "129583191020192" [label=" z should now be 1 COMMENT"];
  "129583191020288" [label="Return"];
  "129583191020288" -> "129583191020480";
  "129583191020480" [label="0 INT"];
}
